LU-17496 lnet: retry cleanup during shutdown

LNet can work a little harder to cleanup during teardown to
avoid an assert on module removal.

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: Ic19c7774fa354b55bbfe21e8d87171dd024748c4
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/53876
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>